--- a/shopServer/templates/adsecondkill.html
+++ b/shopServer/templates/adsecondkill.html
@@ -134,10 +134,10 @@
                                 <label for="">商品id：</label><input type="text"   readonly= "true " name="goodsid" id="goodsid">
                             </div>
                             <div style="padding-top:20px">
-                                <label for="">开始时间：</label><input  class="form-control only" type="date" name="starttime" id="prostart">
+                                <label for="">开始时间：</label><input  class="form-control only" type="datetime-local" name="starttime" id="prostart">
                             </div>
                             <div style="padding-top:20px">
-                                <label for="">结束时间：</label><input  class="form-control only" type="date" name="stoptime" id="prostart">
+                                <label for="">结束时间：</label><input  class="form-control only" type="datetime-local" name="stoptime" id="prostart">
                             </div>
                         </form>
                         
