--- a/shopServer/templates/drawManage.html
+++ b/shopServer/templates/drawManage.html
@@ -53,7 +53,7 @@
 <br>
 
 
-#测试用查询快递单号按钮
+<!-- 测试用查询快递单号按钮 -->
 <input type="text" name="company" id="company" placeholder="请输入快递公司编号">
 <input type="text" name="NO" id="NO" placeholder="请输入快递单号">
 <button class="queryExpress">提交</button>
