--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -32,13 +32,13 @@
 					<th colspan="11">
 
 						<button class="btn btn-default trash AllDelete"><span class = "glyphicon glyphicon-trash">批量删除</span></button>
-						<label id="userNumber" class="count" style="float: right; padding-right: 4%;">共有数据</label>
-
+						<label id="userNumber" class="count" style="float: right; padding-right: 4%;">共有<strong id="orderCount"></strong>条数据</label>
+						
 					</th>
 				</tr>
 			</thead>
 
-			<!-- <caption><strong style="color: #000000;">商品列表</strong></caption> -->
+			
 			<thead>
 				<tr>
 					<th class="info nature">
