--- a/shopServer/templates/activeManage.html
+++ b/shopServer/templates/activeManage.html
@@ -105,7 +105,7 @@
                         <label class="col-sm-4 control-label">活动详情:</label>
                         <textarea class="form-control" rows="6" style="resize: none;" name="activedetail"></textarea>  
                     </div>
-                    <div class="form-group" enctype="multipart/form-data">
+                    <div class="form-group">
                         <label for="">添加图片:</label>
                         <input type="file" class="myfile" name="imgs">
                     </div>
@@ -125,11 +125,72 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
 </div>
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    编辑活动
+                </h4>
+            </div>
+            <div class="modal-body">
+                
+                <form id="myform111"  enctype="multipart/form-data" method="POST" action="http://localhost:8000/activetableManageJsonchange/">
+                    <div class="form-group">
+                  
+                        <label class="col-sm-4 control-label">id:</label>
+                        <input type="text" class="form-control"  id="ss" name="activeid" readonly="readonly">
+                    
+                        <label for="">添加图片:</label>
+                        <input type="file" class="myPhone" name='sb' accept="image/gif,image/jpeg">
+                        <div id="img" class="form-group">
+                            <img src="static/myfile/1.jpg" alt="" id="MyPhone">
+                        </div>
+                    </div>
+                    
+                    </div>
+
+
+                    
+                    <div class="modal-footer">
+                            <input type="submit" class="btn btn-primary"  value="提交" />
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                            </button>
+                            
+                        
+                    </div>
+                    
+                
+                </form>
+               
+          
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
 
 {% endblock %}
 {% block script %}
 <script src="{% static 'js/jquery.form.min.js' %}"></script>
 <script type="text/javascript">
+
+
+$('#myform111').on('submit', function(e) {
+        e.preventDefault(); // prevent native submit
+        $(this).ajaxSubmit({  
+            success : function(data) 
+            {
+                // $("#myModal").hide();
+                alert("成功添加了一条活动");
+                history.go(0)
+                
+            },
+        })
+    });
 
 
     var currpage = 1;
@@ -145,11 +206,17 @@
         activetitle = data.activetitle;
         activePosition = data.activePosition;
         activeName = data.activeName;
-        var Tr = '<tr name="row" class="myrow"><td>' + activeName + '</td><td>' + starttime + '</td><td>' + stoptime + '</td><td>' + activePosition + '</td><td><div id="imagesdiv"><img src="http://localhost:8000/static/myfile/' + imgs + '"/></div></td><td><button class="btn btn-success edit">编 辑</button>  <button class="btn btn-danger delete">删 除</button> </td></tr>';
+        var Tr = '<tr name="row" class="myrow" activeid = "' + activeid + '"><td>' + activeName + '</td><td>' + starttime + '</td><td>' + stoptime + '</td><td>' + activePosition + '</td><td><div id="imagesdiv"><img src="http://localhost:8000/static/myfile/' + imgs + '"/></div></td><td><button class="btn btn-success edit">编 辑</button>  <button class="btn btn-danger delete">删 除</button> </td></tr>';
         $("#myListTable").append(Tr);
     }
     //当modal关闭的时候数据清除
     $('#myModal').on('hide.bs.modal', function ()
+    {
+        $('#myform')[0].reset();
+        //这个方法来清除缓存
+        $(this).find("img").remove();
+    });
+    $('#Modal').on('hide.bs.modal', function ()
     {
         $('#myform')[0].reset();
         //这个方法来清除缓存
@@ -167,40 +234,12 @@
         }
         
     }
-    //请求数据
-    // function ajaxfn(){
-    // 	myPost('activeManageJsonSelect/?page=' + currpage,{},function(result){
-    // 		console.log(result);
-    //             parseDataFn(result);
-    //             adcounts = result.adcounts;
-    //             countPages = Math.ceil(parseInt(adcounts) / 8 );
-                
-    //             var spanele = '<span class="sumdiv">共' + countPages + '页,当前第' + countPages + '页,共' + adcounts + '条数据</span>';
-    //             $("#visible-pages-example").append(spanele);
-    //             $('#visible-pages-example').twbsPagination({
-    //                 totalPages:countPages,
-    //                 first: "首页",
-    //                 last: "尾页",
-    //                 prev: '上一页',
-    //                 next: '下一页',
-    //                 startPage: 1,
-    //                 visiblePages: countPages>5?5:countPages,
-    //                 version: '1.1',
-    //                 onPageClick: function (event, page) {
-    //                     currpage  = page;
-    //                     $(".myrow").remove();
-    //                     $(".sumdiv").remove();
-    //                     ajaxfn();
-    //                 }
-    //             });
-    // 	})
-    // }
-    // ajaxfn();
+
 
     function ajaxfn() {
         myPost('activeManageJsonSelect/?',{}, function (result) {
             adcounts = result.data.length;
-            countPages = Math.ceil(parseInt(adcounts) / 8 );
+            countPages = Math.ceil(parseInt(adcounts) / 10 );
             // console.log($("#myListTable").children("tr"))
 			$("#myListTable").children("tr").remove()
 			//解析数据	
@@ -216,6 +255,7 @@
 			// addFenyeHtml(goodsListPages)
 	});
 }
+
 ajaxfn()   
     
     //ajaxform提交表单
@@ -227,7 +267,8 @@ ajaxfn()
             success : function(data) 
             {
                 // $("#myModal").hide();
-                alert("成功添加一条活动");
+                alert("添加成功！");
+                history.go(0)
             },
             error: function(data) {
                 alert("企业用户升级失败,请联系管理员！");
@@ -249,30 +290,49 @@ ajaxfn()
         $img.attr('src',dataURL);
         }
     });
+    //图片预览
+    $(".myPhone").change(function() {
+        var $file = $(this);
+        //获得文件内容和信息
+        var fileObj = $file[0];
+        var windowURL = window.URL || window.webkitURL;
+        var dataURL;
+        var $img = $("#MyPhone");
+        if(fileObj && fileObj.files && fileObj.files[0]){
+        dataURL = windowURL.createObjectURL(fileObj.files[0]);
+        $img.attr('src',dataURL);
+        }
+    });
+  
     $(document).ready(function(){
         $("#table").delegate("button","click",function(){
             if($(this).html() == '编 辑'){
+                
 
-                $("#myModal").modal("show");
-                var loc = $(this).parent().prev().prev().html();
-                document.getElementById("location").value=loc;
-                var imgsrc = $(this).parent().prev().prev().prev().children().children().attr("src");
-                console.log(imgsrc);
-                $("#myimages").attr('src',imgsrc);
+                $("#Modal").modal("show");
+                var that = $(this).parents("tr")
+                var activeid=that.attr("activeid")
+                document.getElementById("ss").value = activeid;     
             }
             if($(this).html() == "删 除"){
                 console.log("hahhah");
-                // dataId = {"id":""};
-                dataId= $(this).parent().prev().prev().prev().prev().html();
-                that = this;
+                
+                var that = $(this).parents("tr")
+                var dataId=that.attr("activeid")
+                
+              
                 console.log(dataId);
                 $.ajax({
-                    type: "get",
-                    url: "http://localhost:8000/activeManageJsonDelete/?Id="+dataId,
+                    
+                    url: "http://localhost:8000/activetableManageJsonDelete/?dataId="+dataId,
+                    
+
                     success: function (result){
                         if (result.status == "ok"){
                             console.log("shangchuchengg");
-                            $(that).parent().parent().remove();
+                            $(that).parents().remove();
+                            history.go(0)
+                            layer.msg("删除成功")
                         }
                     },
                     error: function (err){
