--- a/shopServer/templates/secondkillManage.html
+++ b/shopServer/templates/secondkillManage.html
@@ -86,10 +86,10 @@
                         <label for="">状态：</label><input type="text"   readonly= "true " name="goodstatus" id="goodstatus">
                     </div>
                     <div style="padding-top:20px">
-                        <label for="">开始时间：</label><input  class="form-control only" type="date" name="starttime" id="prostart">
+                        <label for="">开始时间：</label><input  class="form-control only" type="datetime-local" name="starttime" id="prostart">
                     </div>
                     <div style="padding-top:20px">
-                        <label for="">结束时间：</label><input  class="form-control only" type="date" name="stoptime" id="prostart">
+                        <label for="">结束时间：</label><input  class="form-control only" type="datetime-local" name="stoptime" id="prostart">
                     </div>
                 </form>
                 
@@ -148,10 +148,7 @@ function adEleFn(data){
     }
     //请求数据
 function ajaxfn(){
-        $.ajax({
-            type: "post",
-            url: 'http://localhost:8000/secondkillcommodityQuery/?page=' + currpage,
-            success: function (result){
+    myPost('secondkillcommodityQuery', {"page":currpage} ,function (result){
                 console.log(result);
                 parseDataFn(result);
                 adcounts = result.adcounts;
@@ -174,19 +171,47 @@ function ajaxfn(){
                         ajaxfn();
                     }
                 });
-            },
-            error: function (err){
-                layer.msg("请求失败");
-                console.log(err);
-            }
-        });
+            })
+        // $.ajax({
+        //     type: "post",
+        //     url: 'http://localhost:8000/secondkillcommodityQuery/',
+        //     data:{"page":currpage},
+        //     success: function (result){
+        //         console.log(result);
+        //         parseDataFn(result);
+        //         adcounts = result.adcounts;
+        //         countPages = Math.ceil(parseInt(adcounts) / 8 );
+        //         var spanele = '<span class="sumdiv">共' + countPages + '页,当前第' + countPages + '页,共' + adcounts + '条数据</span>';
+        //         $("#visible-pages-example").append(spanele);
+        //             $('#visible-pages-example').twbsPagination({
+        //             totalPages:countPages,
+        //             first: "首页",
+        //             last: "尾页",
+        //             prev: '上一页',
+        //             next: '下一页',
+        //             startPage: 1,
+        //             visiblePages: countPages>5?5:countPages,
+        //             version: '1.1',
+        //             onPageClick: function (event, page) {
+        //                 currpage  = page;
+        //                 $(".myrow").remove();
+        //                 $(".sumdiv").remove();
+        //                 ajaxfn();
+        //             }
+        //         });
+        //     },
+        //     error: function (err){
+        //         layer.msg("请求失败");
+        //         console.log(err);
+        //     }
+        // });
     }
     ajaxfn();
     
     
     //ajaxform提交表单
     function ajaxSubmitForm(){
-        console.log("submigtajax");
+      
         var option = {
             url : "http://localhost:8000/secondkillManageJsonUpdata/",
             type : 'POST',
@@ -222,11 +247,6 @@ function ajaxfn(){
                 document.getElementById("goodsid").value=goodsid;
                 var goodstatus = $(this).parent().prev().prev().prev().html();
                 document.getElementById("goodstatus").value=goodstatus;
-                var starttime = $(this).parent().prev().prev().html();
-                document.getElementById("starttime").value=starttime;
-                var stoptime = $(this).parent().prev().html();
-                document.getElementById("stoptime").value = stoptime;
-
             }
             if($(this).html() == "删 除"){
                 console.log("hahhah");
@@ -244,7 +264,7 @@ function ajaxfn(){
                         }
                     },
                     error: function (err){
-                        console.log("发生了未知错误，暂时无法修改");
+                        layer.msg("发生了未知错误，暂时无法修改");
                         console.log(err);
                     }
                 });
