--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -283,9 +283,9 @@
 						</div>
 					</div>
 					<!-- 左侧搜索框部分 -->
-					<form action="#" method="get" class="sidebar-form">
+					<form action="http://localhost:8000/goodsManage/" method="get" class="sidebar-form">
 						<div class="input-group">
-							<input type="text" name="q" class="form-control" placeholder="搜索...">
+							<input type="text" name="baseSelectName" class="form-control" placeholder="搜索...">
 							<span class="input-group-btn">
 			                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
 			                  <i class="fa fa-search"></i>
@@ -653,7 +653,12 @@
 				document.getElementById(bg_Div).style.display = 'none';
 			};
 		</script>
+		<script  type="text/javascript">
+			$(".breadcrumb").find('a').click(function(){
+				window.location.href = "/goodsManage/";
+			})
 
+		</script>
 
 
 
