--- a/shopServer/templates/goodsManage.html
+++ b/shopServer/templates/goodsManage.html
@@ -712,6 +712,33 @@ myflag=0
 // 	}
 // }
 
+// 从base中获取数据，跳转到goodsManage,并搜索
+function getPar(par){
+    //获取当前URL
+    var local_url = document.location.href; 
+    //获取要取得的get参数位置
+    var get = local_url.indexOf(par +"=");
+    if(get == -1){
+        return false;   
+    }   
+    //截取字符串
+    var get_par = local_url.slice(par.length + get + 1);    
+    //判断截取后的字符串是否还有其他get参数
+    var nextPar = get_par.indexOf("&");
+    if(nextPar != -1){
+        get_par = get_par.slice(0, nextPar);
+    }
+    return get_par;
+}
+console.log("xxxxxxxxxxxxxxxxxxxx")
+aaa = ""
+aaa = getPar("baseSelectName")
+aaa = decodeURI(aaa)
+console.log(aaa)
+commName = aaa
+
+
+
 function loaddata() {
 	$.ajax({
 		url: "http://localhost:8000/commodityQuery/?page=" + thispage + "&commName=" + commName + "&timeUP=" +timeBtnUp,
