--- a/shopServer/templates/activeManage.html
+++ b/shopServer/templates/activeManage.html
@@ -261,21 +261,48 @@ ajaxfn()
     //ajaxform提交表单
     function ajaxSubmitForm(){
         console.log("submigtajax");
-        var option = {
-            url : "http://localhost:8000/activetableManageJsonAdd/",
-            type : 'POST',
-            success : function(data) 
-            {
-                // $("#myModal").hide();
-                alert("添加成功！");
-                history.go(0)
-            },
-            error: function(data) {
-                alert("企业用户升级失败,请联系管理员！");
-                console.log(data)
+        aaa=document.getElementById("prostart").value;
+        bbb=document.getElementById("proend").value;
+        var oDate1=new Date(aaa);
+        var oDate2=new Date(bbb)
+        if(oDate1<oDate2){
+            var option = {
+                url : "http://localhost:8000/activetableManageJsonAdd/",
+                type : 'POST',
+                success : function(data) 
+                {
+                    // $("#myModal").hide();
+                    layer.msg('添加成功');
+                    // alert("成功添加一条活动");
+                },
+                error: function(data) {
+                    alert("企业用户升级失败,请联系管理员！");
+                    console.log(data)
+                }
+                };
+                $("#myform").ajaxSubmit(option);
             }
-        };
-        $("#myform").ajaxSubmit(option);
+        else{
+            layer.msg('结束时间不能早于开始时间');
+        }
+        // console.log(aaa)
+        // console.log("333333333")
+        // console.log(bbb)
+        // var option = {
+        //     url : "http://localhost:8000/activetableManageJsonAdd/",
+        //     type : 'POST',
+        //     success : function(data) 
+        //     {
+        //         // $("#myModal").hide();
+        //         layer.msg('添加成功');
+        //         // alert("成功添加一条活动");
+        //     },
+        //     error: function(data) {
+        //         alert("企业用户升级失败,请联系管理员！");
+        //         console.log(data)
+        //     }
+        // };
+        // $("#myform").ajaxSubmit(option);
     }
     //图片预览
     $(".myfile").change(function() {
