--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -283,7 +283,7 @@
 						</div>
 					</div>
 					<!-- 左侧搜索框部分 -->
-					<form action="http://localhost:8000/goodsManage/" method="get" class="sidebar-form">
+					<form action="http://localhost:8000/goodsManage/" method="post" class="sidebar-form">
 						<div class="input-group">
 							<input type="text" name="baseSelectName" class="form-control" placeholder="搜索...">
 							<span class="input-group-btn">
